# azure_deploy_model

./: .gitignore  Dockerfile  README.md  azure_functions.ipynb  deploy.zsh  deployment_template.json  parameters.json  pyproject.toml
.github/workflows/: github_actions.yml
predict/: __init__.py  rf_clf.joblib
scripts/: train_iris_rf.py
